//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Board {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  columns Column [not null]
}

Table Column {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  board Board
  boardId String
  tasks Task [not null]
}

Table Task {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String
  status String [not null, default: 'NOT_STARTED']
  subtasks Subtask [not null]
  column Column
  columnId String
}

Table Subtask {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  isComplete Boolean [not null, default: false]
  task Task
  taskId String
}

Ref: Column.boardId > Board.id

Ref: Task.columnId > Column.id

Ref: Subtask.taskId > Task.id